tests/expectations/compiler/dynamic_dispatch/cast_struct_to_dyn_record_fail.out
Error [ETYC0372117]: Expected a record type but type `test.aleo/Foo` was found.
    --> compiler-test:8:16
     |
   8 |         return f as dyn record;
     |                ^
